native/native.tests/testData/compilerOutput/SignatureClashDiagnostics/output.txt
native/native.tests/testData/compilerOutput/SignatureClashDiagnostics/main.kt:4:5: error: platform declaration clash: The following functions have the same IR signature (com.example.klib.serialization.diagnostics/A.foo|foo(){}[0]):
    fun foo(): kotlin.String defined in com.example.klib.serialization.diagnostics.A
    fun foo(): kotlin.Int defined in com.example.klib.serialization.diagnostics.A
    @Deprecated("", level = DeprecationLevel.HIDDEN)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
native/native.tests/testData/compilerOutput/SignatureClashDiagnostics/main.kt:7:5: error: platform declaration clash: The following functions have the same IR signature (com.example.klib.serialization.diagnostics/A.foo|foo(){}[0]):
    fun foo(): kotlin.String defined in com.example.klib.serialization.diagnostics.A
    fun foo(): kotlin.Int defined in com.example.klib.serialization.diagnostics.A
    fun foo(): Int = 0
    ^^^^^^^^^^^^^^^^^^
native/native.tests/testData/compilerOutput/SignatureClashDiagnostics/main.kt:10:1: error: platform declaration clash: The following properties have the same IR signature (com.example.klib.serialization.diagnostics/myVal|{}myVal[0]):
    val myVal: kotlin.String defined in com.example.klib.serialization.diagnostics
    var myVal: kotlin.Int defined in com.example.klib.serialization.diagnostics
    var myVal: kotlin.Long defined in com.example.klib.serialization.diagnostics
var myVal: Long = 0L
^^^^^^^^^^^^^^^^^^^^
native/native.tests/testData/compilerOutput/SignatureClashDiagnostics/main.kt:10:1: error: platform declaration clash: The following functions have the same IR signature (com.example.klib.serialization.diagnostics/myVal.<get-myVal>|<get-myVal>(){}[0]):
    fun `<get-myVal>`(): kotlin.Int defined in com.example.klib.serialization.diagnostics
    fun `<get-myVal>`(): kotlin.Long defined in com.example.klib.serialization.diagnostics
    fun `<get-myVal>`(): kotlin.String defined in com.example.klib.serialization.diagnostics
var myVal: Long = 0L
^^^^^^^^^^^^^^^^^^^^
native/native.tests/testData/compilerOutput/SignatureClashDiagnostics/main.kt:15:1: error: platform declaration clash: The following properties have the same IR signature (com.example.klib.serialization.diagnostics/myVal|{}myVal[0]):
    val myVal: kotlin.String defined in com.example.klib.serialization.diagnostics
    var myVal: kotlin.Int defined in com.example.klib.serialization.diagnostics
    var myVal: kotlin.Long defined in com.example.klib.serialization.diagnostics
@Deprecated("", level = DeprecationLevel.HIDDEN)
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
native/native.tests/testData/compilerOutput/SignatureClashDiagnostics/main.kt:15:1: error: platform declaration clash: The following functions have the same IR signature (com.example.klib.serialization.diagnostics/myVal.<get-myVal>|<get-myVal>(){}[0]):
    fun `<get-myVal>`(): kotlin.Int defined in com.example.klib.serialization.diagnostics
    fun `<get-myVal>`(): kotlin.Long defined in com.example.klib.serialization.diagnostics
    fun `<get-myVal>`(): kotlin.String defined in com.example.klib.serialization.diagnostics
@Deprecated("", level = DeprecationLevel.HIDDEN)
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
native/native.tests/testData/compilerOutput/SignatureClashDiagnostics/main.kt:18:1: error: platform declaration clash: The following properties have the same IR signature (com.example.klib.serialization.diagnostics/myVal|{}myVal[0]):
    val myVal: kotlin.String defined in com.example.klib.serialization.diagnostics
    var myVal: kotlin.Int defined in com.example.klib.serialization.diagnostics
    var myVal: kotlin.Long defined in com.example.klib.serialization.diagnostics
@Deprecated("", level = DeprecationLevel.HIDDEN)
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
native/native.tests/testData/compilerOutput/SignatureClashDiagnostics/main.kt:20:5: error: platform declaration clash: The following functions have the same IR signature (com.example.klib.serialization.diagnostics/myVal.<get-myVal>|<get-myVal>(){}[0]):
    fun `<get-myVal>`(): kotlin.Int defined in com.example.klib.serialization.diagnostics
    fun `<get-myVal>`(): kotlin.Long defined in com.example.klib.serialization.diagnostics
    fun `<get-myVal>`(): kotlin.String defined in com.example.klib.serialization.diagnostics
    get() = ""
    ^^^^^^^^^^
COMPILATION_ERROR
